fixed temperature  alignment

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -33,6 +33,6 @@
 .Weather .temperature {
   font-weight: bold;
   font-size: 48px;
-  margin-left: 5px;
+  margin-left: 10px;
 }
 
